--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -17,22 +17,22 @@ spec:
     - host: 35.240.181.15.xip.io
       http:
         paths:
-          - path: /?(.*)
+          - path: /
             backend: 
               serviceName: client-cluster-ip-service
               servicePort: 3000
-          - path: /api/?(.*)
+          - path: /api/
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
     - host: www.35.240.181.15.xip.io
       http:
         paths:
-          - path: /?(.*)
+          - path: /
             backend: 
               serviceName: client-cluster-ip-service
               servicePort: 3000
-          - path: /api/?(.*)
+          - path: /api/
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
